--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
